# exalted

./: Cargo.toml  README.md  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1h86px6zj1zlxnlnw7b4lv3jkdyp0al8-source  dd08637p509vw534yjb8qwws9ycx07qz-source  lwaaxg1w634zx0ijk0x25m408xaq3fly-source  p9sy5nf9jdwj69gmr3c3n03npzr5kkqi-source
src/: editor.rs  layout.rs  main.rs  winit_app.rs
src/layout/: editor.rs  mod.rs  nav_bar.rs  status_bar.rs
