[package]
name = "exalted"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"

[dependencies]
cosmic-text = "0.12"
crop = "0.4"
image = "0.25"
softbuffer = "0.4"
taffy = { version = "0.5", features = [ "grid", "flexbox" ] }
tiny-skia = "0.11"
winit = "0.30"
